--- a/index1.html
+++ b/index1.html
@@ -12,6 +12,7 @@
 <h5>FULL STACK DEVELOPMENT</h5>
 <h6>FULL STACK DEVELOPMENT</h6>
 <p>Welcome to our FULL STACK DEVELOPMENT class. Here we are going to see about MERN Stack, Both Front-end and Back-end</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos deserunt harum quam, obcaecati necessitatibus ducimus amet nihil nulla commodi earum totam tempora vero deleniti corporis cupiditate laborum minus? Iste, nesciunt.</p>
 <img src="passport size pic.jpg">
 <div>A paragraph is a series of sentences that are organized and coherent, and are all related to a single topic. Almost every piece of writing you do that is longer than a few sentences should be organized into paragraphs.</div>
 <b>Abilash</b>
